--- a/public/demo/index.html
+++ b/public/demo/index.html
@@ -18,13 +18,22 @@
 <body>
   <div class="container" id="wrapper">
     <h1>Collaborative editing with CodeMirror</h1>
+    <div class="row">
+      <div class="span9" id="editor-wrapper"></div>
+      <div class="span3">
+        <div class="well" id="userlist-wrapper">
+          <h3>Connected Users</h3>
+        </div>
+      </div>
+    </div>
   </div>
 
   <script src="/codemirror/lib/codemirror.js"></script>
   <script src="/codemirror/mode/xml/xml.js"></script>
   <script src="/codemirror/mode/markdown/markdown.js"></script>
   <script src="/socket.io/socket.io.js"></script>
-  <script src="/ot-min.js"></script>
+  <!--<script src="/ot-min.js"></script>-->
+  <script src="/ot.js"></script>
   <script src="/demo/client.js"></script>
 </body>
 
