--- a/public/demo/index.html
+++ b/public/demo/index.html
@@ -8,21 +8,48 @@
   <link rel="stylesheet" href="/codemirror/lib/codemirror.css" />
   <link rel="stylesheet" href="/styles.css" />
   <link rel="stylesheet" href="/codemirror-client.css" />
-  <style>
-    .CodeMirror-scroll {
-      height: 600px;
-    }
-  </style>
 </head>
 
 <body>
   <div class="container" id="wrapper">
     <h1>Collaborative editing with CodeMirror</h1>
     <div class="row">
-      <div class="span9" id="editor-wrapper"></div>
+      <div class="span9" id="editor-wrapper">
+        <div class="row">
+          <div class="span3">
+            <div class="btn-toolbar">
+              <div class="btn-group">
+                <a id="undo-btn" class="btn" href="#" title="Undo">
+                  <i class="icon-arrow-left"></i>
+                </a>
+                <a id="redo-btn" class="btn" href="#" title="Redo">
+                  <i class="icon-arrow-right"></i>
+                </a>
+              </div>
+              <div class="btn-group">
+                <a id="bold-btn" class="btn" href="#" title="Bold">
+                  <i class="icon-bold"></i>
+                </a>
+                <a id="italic-btn" class="btn" href="#" title="Italic">
+                  <i class="icon-italic"></i>
+                </a>
+                <a id="code-btn" class="btn" href="#" title="Code">
+                  <i class="icon-barcode"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="span6">
+            <form id="login-form" class="form-inline btn-toolbar">
+              <input id="username" class="span2 input-small" autofocus="autofocus" type="text" placeholder="Username" required="required" value="" />
+              <input type="submit" class="btn btn-success" value="Participate" />
+            </form>
+          </div>
+        </div>
+      </div>
       <div class="span3">
         <div class="well" id="userlist-wrapper">
-          <h3>Connected Users</h3>
+          <h2>Users</h2>
         </div>
       </div>
     </div>
