First stages of implementing a diamond diagram (like in Daniel Spiewak's article about OT)

--- a/public/visualization/index.html
+++ b/public/visualization/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Visualization of Operational Transformations</title>
+  <title>Visualization of Operational Transformation</title>
   <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css" />
   <link rel="stylesheet" href="/styles.css" />
   <link rel="stylesheet" href="/codemirror/lib/codemirror.css" />
@@ -21,6 +21,7 @@
   <script src="/visualization/jquery-min.js"></script>
   <script src="/bootstrap/js/bootstrap.min.js"></script>
   <script src="/ot-min.js"></script>
+  <script src="/d3.v2.min.js"></script>
   <script src="/codemirror/lib/codemirror.js"></script>
   <script src="/visualization/server.js"></script>
   <script src="/visualization/visualization.js"></script>
