--- a/public/codemirror/demo/theme.html
+++ b/public/codemirror/demo/theme.html
@@ -6,6 +6,7 @@
     <script src="../lib/codemirror.js"></script>
     <link rel="stylesheet" href="../theme/neat.css">
     <link rel="stylesheet" href="../theme/elegant.css">
+    <link rel="stylesheet" href="../theme/erlang-dark.css">
     <link rel="stylesheet" href="../theme/night.css">
     <link rel="stylesheet" href="../theme/monokai.css">
     <link rel="stylesheet" href="../theme/cobalt.css">
@@ -15,11 +16,12 @@
     <link rel="stylesheet" href="../theme/xq-dark.css">
     <link rel="stylesheet" href="../theme/ambiance.css">
     <link rel="stylesheet" href="../theme/blackboard.css">
+    <link rel="stylesheet" href="../theme/vibrant-ink.css">
     <script src="../mode/javascript/javascript.js"></script>
     <link rel="stylesheet" href="../doc/docs.css">
 
     <style type="text/css">
-      .CodeMirror {border: 1px solid black;}
+      .CodeMirror {border: 1px solid black; font-size:13px}
     </style>
   </head>
   <body>
@@ -46,11 +48,13 @@ function findSequence(goal) {
     <option>cobalt</option>
     <option>eclipse</option>
     <option>elegant</option>
+    <option>erlang-dark</option>
     <option>lesser-dark</option>
     <option>monokai</option>
     <option>neat</option>
     <option>night</option>
     <option>rubyblue</option>
+    <option>vibrant-ink</option>
     <option>xq-dark</option>
 </select>
 </p>
