removed demo (demo is now in the operational-transformation.github.com repo)

--- a/public/index.html
+++ b/public/index.html
@@ -3,23 +3,64 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Demos &middot; Operational Transformation</title>
+  <title>Collaborative editing with CodeMirror</title>
   <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="/codemirror/lib/codemirror.css" />
   <link rel="stylesheet" href="/styles.css" />
 </head>
 
 <body>
   <div class="container" id="wrapper">
-    <h1>Demos &middot; Operational Transformation</h1>
-    <ul>
-      <li>
-        <a href="/demo">Public Demonstration</a>
-      </li>
-      <li>
-        <a href="/visualization">Visualization of the Client-Server-Interaction</a>
-      </li>
-    </ul>
+    <h1>Collaborative editing with CodeMirror</h1>
+    <div class="row">
+      <div class="span9" id="editor-wrapper">
+        <div class="row">
+          <div class="span3">
+            <div class="btn-toolbar">
+              <div class="btn-group">
+                <a id="undo-btn" class="btn" href="#" title="Undo">
+                  <i class="icon-arrow-left"></i>
+                </a>
+                <a id="redo-btn" class="btn" href="#" title="Redo">
+                  <i class="icon-arrow-right"></i>
+                </a>
+              </div>
+              <div class="btn-group">
+                <a id="bold-btn" class="btn" href="#" title="Bold">
+                  <i class="icon-bold"></i>
+                </a>
+                <a id="italic-btn" class="btn" href="#" title="Italic">
+                  <i class="icon-italic"></i>
+                </a>
+                <a id="code-btn" class="btn" href="#" title="Code">
+                  <i class="icon-barcode"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="span6">
+            <form id="login-form" class="form-inline btn-toolbar">
+              <input id="username" class="span2 input-small" autofocus="autofocus" type="text" placeholder="Username" required="required" value="" />
+              <input type="submit" class="btn btn-success" value="Participate" />
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="span3">
+        <div class="well" id="userlist-wrapper">
+          <h2>Users</h2>
+        </div>
+      </div>
+    </div>
   </div>
+
+  <script src="/codemirror/lib/codemirror.js"></script>
+  <script src="/codemirror/mode/xml/xml.js"></script>
+  <script src="/codemirror/mode/markdown/markdown.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <!--<script src="/ot-min.js"></script>-->
+  <script src="/ot.js"></script>
+  <script src="/client.js"></script>
 </body>
 
 </html>
