--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
   <script src="/static/components/codemirror/mode/markdown/markdown.js"></script>
   <script src="/static/components/jquery/jquery.min.js"></script>
   <script>
-    var useSocketIO = window.location.hash === '#socketio';
+    var useSocketIO = window.location.hash !== '#ajax';
     if (useSocketIO) {
       document.write('<'+'script src="/socket.io/socket.io.js"></'+'script>');
     }
